--- a/table/tabelDimensiL3.tex
+++ b/table/tabelDimensiL3.tex
@@ -1,16 +1,14 @@
 \begin{longtable}{@{\extracolsep{\fill}}
-    >{\raggedright\arraybackslash}p{2.5cm}
-    >{\raggedright\arraybackslash}p{4cm}
-    >{\raggedright\arraybackslash}p{4.5cm}
-    >{\raggedright\arraybackslash}p{3cm}
+    >{\raggedright\arraybackslash}p{3.0cm}
+    >{\raggedright\arraybackslash}p{5.0cm}
+    >{\raggedright\arraybackslash}p{5.0cm}
 }
-\caption{Penilaian Dimensi EA pada Level 3 \textit{Defined} Berdasarkan TOGAF dan Kondisi Aktual Paragon Corp}
+\caption{Penilaian Dimensi AE pada Level 3 \textit{Defined} Berdasarkan TOGAF dan Kondisi Aktual Paragon Corp}
 \label{tbl:Level3EAMM} \\
 \toprule
 \textbf{Dimensi} &
 \textbf{Indikator Level 3 (\textit{Defined}) (TOGAF)} &
-\textbf{Kondisi Aktual Paragon Corp (Wawancara)} &
-\textbf{Penjelasan Level Capaian} \\
+\textbf{Kondisi Aktual Paragon Corp (Wawancara)} \\
 \midrule
 \endfirsthead
 
@@ -18,13 +16,12 @@
 \toprule
 \textbf{Dimensi} &
 \textbf{Indikator Level 3 (\textit{Defined}) (TOGAF)} &
-\textbf{Kondisi Aktual Paragon Corp (Wawancara)} &
-\textbf{Penjelasan Level Capaian} \\
+\textbf{Kondisi Aktual Paragon Corp (Wawancara)} \\
 \midrule
 \endhead
 
 \midrule
-\multicolumn{4}{r}{\textit{Bersambung ke halaman berikutnya}} \\
+\multicolumn{3}{r}{\textit{Bersambung ke halaman berikutnya}} \\
 \endfoot
 
 \bottomrule
@@ -33,34 +30,32 @@
 % ====================== ROWS ======================
 
 \textbf{\textit{Architecture Process}} &
-Proses arsitektur terdefinisi, dikomunikasikan, dan konsisten; sudah ada analisis \textit{gap} dan rencana migrasi. &
-Prosedur utama sudah dibakukan dan disosialisasikan melalui dokumen internal dan SAP LeanIX; proses diterapkan konsisten di unit kunci, tetapi belum menyeluruh pada seluruh organisasi. &
-2–3: Proses sudah jelas dan terdokumentasi; belum sepenuhnya jadi kebiasaan lintas unit. \\
+Proses arsitektur sudah dijelaskan dengan jelas, terdokumentasi, dan disosialisasikan. Selain itu sudah ada \textit{gap analysis} dan rencana migrasi menuju kondisi ideal. &
+Proses sudah disosialisasikan melalui dokumen dan SAP LeanIX. Namun, dalam pelaksanaannya, beberapa tim masih menjalankan proses dengan cara yang berbeda-beda. 
+\textit{Gap analysis} juga sudah didokumentasikan.\\
 
-\textbf{\textit{Architecture Development}} &
-TRM dan \textit{standards profile} lengkap; \textit{gap analysis} dan rencana migrasi diterapkan di seluruh \textit{domain}. &
-\textit{Domain} arsitektur bisnis dan aplikasi diperbarui rutin; artefak data, infra, dan keamanan baru dilengkapi setelah pelaksanaan, belum proaktif sejak awal. &
-2–3: Bisnis/aplikasi matang; data/teknologi perlu penguatan untuk capai Level 3 penuh. \\
+\textbf{\textit{Architecture Development}} &    
+TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
+Dokumentasi arsitektur untuk \textit{domain} bisnis dan aplikasi akan dimulai sejak awal perencanaan inisiatif. 
+Namun, untuk \textit{domain} arsitektur dan keamanan dimulai beriringan berjalannya suatu inisiatif.\\
 
 \textbf{\textit{Business Alignment}} &
-EA terintegrasi dengan perencanaan investasi dan pengendalian proyek. &
-\textit{Business Architect} aktif selaraskan kebutuhan IT dan bisnis namun investasi belum sepenuhnya berbasis analisis EA formal. &
-2–3: Integrasi formal baru diterapkan di sebagian proses, belum menyeluruh semua inisiatif. \\
+AE sudah menjadi bagian dari proses perencanaan investasi dan pengendalian proyek. &
+\textit{Business Architect} aktif menjaga agar kebutuhan TI tetap selaras dengan tujuan bisnis. 
+Namun, beberapa keputusan masih berjalan berdasarkan kebutuhan operasional, bukan berdasarkan evaluasi AE secara menyeluruh.\\
 
 \textbf{\textit{Organization}} &
-Manajemen mendukung penuh; seluruh unit terlibat secara berkelanjutan dan kolaboratif. &
-Struktur peran sudah ditetapkan; kolaborasi sudah berjalan dalam beberapa forum  tetapi partisipasi lintas unit masih situasional. &
-2: Dukungan dan kolaborasi ada, tetapi belum konsisten dan belum semua unit terlibat rutin. \\
+Manajemen memberikan dukungan penuh dan keterlibatan lintas unit berjalan secara berkelanjutan dan kolaboratif. &
+Struktur peran sudah ditetapkan dengan jelas. Namun, belum dilakukan secara proaktif tanpa dorongan konteks tertentu. \\
 
 \textbf{\textit{Architecture Governance}} &
-Tata kelola terdokumentasi dan mencakup mayoritas investasi TI; Terdapat mekanisme pengecualian (\textit{waiver}). &
-Tanggung jawab sudah dibagi dan adanya monitoring artefak; forum \textit{Architecture Review Board} (ARB) dan \textit{waivr} belum berjalan; Kepatuhan masih berdasarkan himbauan, bukan mekanisme wajib. &
-2: Tata kelola sudah diarahkan formal tetapi belum sepenuhnya konsisten; mekanisme \textit{waiver} belum matang. \\
+Tata kelola sudah terdokumentasi dan mencakup sebagian besar investasi TI dan adanya mekanisme pengecualian resmi (\textit{waiver}). &
+Tanggung jawab dalam pengelolaan arsitektur sudah dibagi, dan terdapat proses pemantauan artefak.
+Namun, forum \textit{Architecture Review Board} (ARB) belum berjalan secara formal.
+Selain itu, kepatuhan terhadap standar masih bersifat himbauan, sehingga belum ada aturan wajib yang harus dipatuhi oleh semua tim. \\
 
 \textbf{\textit{Architecture Communication}} &
-Dokumentasi arsitektur diperbarui periodik dan dikomunikasikan ke TI dan bisnis secara rutin. &
-SAP LeanIX sudah menjadi sumber referensi utama; update artefak mulai periodik.  
-Namun penyebaran dokumen masih melalui pelaporan teknis dan belum mencakup seluruh unit. &
-Level 2–3: Dokumentasi periodik, tetapi komunikasi belum merata ke semua pemangku kepentingan. \\
+Dokumentasi arsitektur diperbarui secara berkala dan dikomunikasikan secara rutin ke tim TI dan bisnis. &
+SAP LeanIX sudah digunakan sebagai sumber referensi utama untuk dokumen arsitektur, dan pembaruan dokumen mulai dilakukan secara rutin.\\
 
 \end{longtable}
