--- a/table/tabelEAMM.tex
+++ b/table/tabelEAMM.tex
@@ -17,7 +17,7 @@
 \midrule
 \endfirsthead
 
-\caption{\textit{Enterprise Architecture Maturity Model} (lanjutan)} \\
+\caption[]{\textit{Enterprise Architecture Maturity Model} (lanjutan)} \\
 \toprule
 \textbf{Dimensi} &
 \textbf{Level 1 (\textit{Initial})} &
@@ -38,45 +38,45 @@
 % ========== ROWS ==========
 
 \textbf{\textit{Architecture Process}} &
-Proses arsitektur masih \textit{ad-hoc}, tidak konsisten, dan bergantung pada individu. &
-Proses dasar telah terdokumentasi dan peran mulai ditetapkan. &
-Proses arsitektur terdefinisi, dikomunikasikan, dan konsisten; Sudah ada analisis \textit{gap} dan rencana migrasi. &
-Proses menjadi budaya organisasi; kualitas proses diukur. &
-Proses terus diperbaiki secara berkelanjutan menggunakan metrik. \\
+Proses arsitektur masih dilakukan secara spontan, tidak konsisten, dan tergantung individu. &
+Proses dasar sudah ditulis dan mulai jelas. Selain itu, peran-peran sudah ditentukan. &
+Proses arsitektur sudah dijelaskan dengan jelas, terdokumentasi, dan disosialisasikan. Selain itu sudah ada \textit{gap analysis} dan rencana migrasi menuju kondisi ideal. &
+Proses menjadi kebiasaan organisasi dan kualitas proses sudah diukur.&
+Proses terus diperbaiki menggunakan data dan metrik untuk meningkatkan hasil. \\
 
 \textbf{\textit{Architecture Development}} &
-Dokumentasi dan standar masih sporadis dan tidak terpadu. &
-TRM dan \textit{standards profile} lengkap; \textit{gap analysis} dan rencana migrasi diterapkan di seluruh \textit{domain}. &
-TRM dan \textit{standards profile} lengkap; analisis kesenjangan dan rencana migrasi selesai. &
-Dokumentasi diperbarui rutin; seluruh domain mengikuti standar formal. &
-Ada proses standar dan mekanisme pengecualian untuk meningkatkan kualitas pengembangan. \\
+Dokumen dan standar arsitektur belum menyatu. &
+Sudah ada TRM dan \textit{standards profile}. Selain itu, \textit{gap analysis} dan rencana migrasi diterapkan untuk semua \textit{domain} arsitektur. &
+TRM dan \textit{standards profile} sudah lengkap. Selain itu, \textit{gap analysis} dan rencana migrasi juga sudah selesai dibuat. &
+Dokumentasi arsitektur diperbarui secara rutin dan semua \textit{domain} mengikuti standar yang sama. &
+Menerapkan mekanisme pengecualian (\textit{waiver}) yang digunakan untuk menjaga dan meningkatkan kualitas pengembangan arsitektur. \\
 
 \textbf{\textit{Business Alignment}} &
-Hubungan dengan strategi bisnis minim dan tidak terdokumentasi. &
-Keterkaitan EA dan strategi bisnis dijelaskan eksplisit. &
-EA terintegrasi dengan perencanaan investasi dan pengendalian proyek. &
-Keputusan investasi diperbarui berdasarkan masukan EA; \textit{business drivers} ditinjau berkala. &
-Metrik EA mengoptimalkan hubungan bisnis; unit bisnis aktif dalam perbaikan berkelanjutan. \\
+AE hampir tidak terhubung dengan strategi bisnis dan tidak terdokumentasi. &
+Hubungan AE dan strategi bisnis mulai dijelaskan dengan jelas. &
+AE sudah menjadi bagian dari proses perencanaan investasi dan pengendalian proyek. &
+Keputusan investasi diperbarui berdasarkan masukan dari AE dan tujuan bisnis ditinjau secara berkala. &
+AE memiliki metrik yang membantu menyelaraskan TI dan bisnis. Selain itu, unit bisnis terlibat aktif dalam perbaikan berkelanjutan.\\
 
 \textbf{\textit{Organization}} &
-Manajemen belum terlibat; partisipasi unit rendah. &
-Manajemen mulai menyadari pentingnya EA; beberapa unit terlibat. &
-Manajemen mendukung penuh; seluruh unit terlibat secara berkelanjutan dan kolaboratif. &
-Manajemen meninjau langsung EA; seluruh unit terlibat konsisten. &
-Semua unit memberi umpan balik rutin; manajemen mendorong peningkatan berkelanjutan. \\
+Manajemen tidak terlibat dan partisipasi unit sangat rendah. &
+Manajemen mulai memahami pentingnya AE dan beberapa unit mulai ikut terlibat. &
+Manajemen memberikan dukungan penuh dan keterlibatan lintas unit berjalan secara berkelanjutan dan kolaboratif. &
+Manajemen meninjau langsung AE dan seluruh unit terlibat konsisten. &
+Semua unit memberi umpan balik secara rutin dan manajemen selalu mendorong peningkatan secara terus-menerus. \\
 
 \textbf{\textit{Architecture Governance}} &
-Tidak ada tata kelola; kepatuhan sangat rendah. &
+Tidak ada tata kelola dan kepatuhan sangat rendah. &
 Tata kelola mulai diterapkan pada beberapa standar. &
-Tata kelola terdokumentasi dan mencakup mayoritas investasi TI; Terdapat mekanisme pengecualian (\textit{waiver}). &
-Tata kelola menyeluruh; pengelolaan deviasi terintegrasi dengan EA. &
-Tata kelola matang; mekanisme waiver mendukung peningkatan berkelanjutan; tidak ada investasi TI tak terencana. \\
+Tata kelola sudah terdokumentasi dan mencakup sebagian besar investasi TI dan adanya mekanisme pengecualian resmi (\textit{waiver}). &
+Tata kelola berlaku menyeluruh dan pengelolaan penyimpangan (deviasi) terintegrasi dengan AE. &
+Tata kelola sudah matang dan penggunaan mekanisme \textit{waiver} mendukung peningkatan berkelanjutan. Selain itu, tidak ada investasi TI yang dilakukan tanpa perencanaan. \\
 
 \textbf{\textit{Architecture Communication}} &
-Dokumentasi ada, tetapi komunikasi terbatas dan lokal. &
-Media komunikasi EA diperbarui dan digunakan menyimpan dokumen arsitektur. &
-Dokumentasi arsitektur diperbarui periodik dan dikomunikasikan ke TI dan bisnis secara rutin. &
-Dokumentasi dan proses komunikasi mengikuti perkembangan terbaru. &
-Dokumen EA digunakan oleh seluruh pengambil keputusan; komunikasi menjadi mekanisme utama EA. \\
+Dokumentasi tersedia tetapi komunikasi masih terbatas dan hanya dilakukan di lingkup kecil. &
+Media komunikasi AE diperbarui dan digunakan untuk menyimpan dokumen arsitektur. &
+Dokumentasi arsitektur diperbarui secara berkala dan dikomunikasikan secara rutin ke tim TI dan bisnis. &
+Dokumentasi dan komunikasi mengikuti perkembangan terbaru dan diperbarui secara konsisten. &
+Dokumen EA digunakan oleh semua pengambil keputusan dan komunikasi menjadi alat utama dalam proses EA. \\
 
 \end{longtable}
